# jenkspy

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  setup.py
.github/workflows/: wheel.yml
jenkspy/: CHANGES.rst  __init__.py  core.py
jenkspy/src/: _jenks.c  jenks.c  jenks.pyx
tests/: test_jenks.py
