[build-system]
requires = ["setuptools >= 61.0", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = 'jenkspy'
dynamic = ["version"]
dependencies = [
  "numpy"
]
requires-python = ">= 3.7"
authors = [
  {name = "Matthieu Viry", email = "matthieu.viry@cnrs.fr"},
]
maintainers = [
  {name = "Matthieu Viry", email = "matthieu.viry@cnrs.fr"},
]
description = "Compute Natural Breaks (Fisher-Jenks algorithm)"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
  "Programming Language :: Python",
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]


[project.urls]
Homepage = "https://github.com/mthh/jenkspy"
Repository = "https://github.com/mthh/jenkspy.git"
Issues = "https://github.com/mthh/jenkspy/issues"
Changelog = "https://github.com/mthh/jenkspy/blob/master/CHANGES.rst"

[tool.setuptools]
packages = ["jenkspy"]
include-package-data = false


[tool.setuptools.package-data]
jenkspy = ["src/*"]

[tool.setuptools.dynamic]
version = {attr = "jenkspy.__version__"}
readme = {file = "README.md", content-type = "text/x-rst"}